# ZSim

./: .gitignore  Actionlist_test.py  BonusCalcualte.py  BuffAdd.py  BuffClass.py  BuffExist_Judge.py  BuffExsist_Judge.py  BuffJosn.json  BuffLoad.py  Buff效果.csv  Calcultor.py  ChangeChar.py  Change_Float.py  CharBuffList.py  CharConfig.json  CharDynamic.py  CharSet.py  CharSet_new.py  CharacterClass.py  ComplexBuffClass.py  DamageCalcultor.py  Dot.py  Enemy.py  EnemyClass.py  EnemyConfig.json  EnemySet.py  EventClass.py  InitSkillsSequence.py  KCalculate.py  LISENCE  LinkedList.py  Muldict.json  MultiClass.py  Parameter.py  README.md  README_CN.md  Report.py  SkillEventSplit.py  Skill_Class.py  SkillsQueue.py  (+28 more)
.github/workflows/: build_and_release.yml  run_pytest-windows.yml  run_pytest.yml
.run/: Run in Project Path.run.xml
Anomaly/: __init__.py
AnomalyBar/: ActiveAnomaly.py  Anomalies.py  AnomalyBarClass.py  CopyAnomalyForOutput.py  Disorder.py  __init__.py
Buff/: BuffAdd.py  BuffAddStrategy.py  BuffExist_Judge.py  BuffLoad.py  ScheduleBuffSettle.py  __init__.py  buff_class.py  buff_config.json
Buff/BuffXLogic/: AnomalyDebuffExitJudge.py  BranchBladeSongCritDamageBonus.py  BranchBladeSongCritRateBonus.py  HailstormShrineIceBonus.py  HellfireGearsSpRBonus.py  (+26 more)
CharSet_new/: Soukaku.py  character.py
Character/: Ellen.py  Lighter.py  Miyabi.py  Qingyi.py  Soldier11.py  Soukaku.py  __init__.py  character.py  filters.py  skill_class.py
Dot/: AnomalyDot.py  BaseDot.py  __init__.py
Load/: ActionStack.py  LoadDamageEvent.py  LoadEvent.py  SkillEventSplit.py  __init__.py  loading_mission.py
Preload/: ApplyAPL.py  SkillsQueue.py  __init__.py  watchdog.py
PreloadConponents/: watchdog.py
RandomNumberGenerator/: __init__.py
ScheduledEvent/: CalAnomaly.py  Calculator.py  Calcultor.py  MultiplierData.py  __init__.py  buff_effect_trans.json
data/: Buff效果.csv  apl_test.txt  buff_effect.csv  buff_effect.json  buff_effect_to_json.py  character.csv  character_config.toml  csv_excel_sync.py  default_skill.csv  enemy.csv  enemy_adjustment.csv  enemy_attack_action.csv  enemy_attack_method.csv  equip_set_2pc.csv  game_data.xlsx  skill.csv  str_to_num.py  weapon.csv  扳机逻辑.txt  激活判断.csv  触发判断.csv  计算序列.csv
data_struct/: ActionStack.cpp  ActionStack.py  LinkedList.c  LinkedList.cp313-win_amd64.pyd  LinkedList.html  LinkedList.py  __init__.py  data_analyzer.c  data_analyzer.html  data_analyzer.py  setup.py  single_hit.py  sp_update_data.py
docs/: README_CN.md  ReadMe.md  ZZZSim_APL功能技术文档.html  ZZZSim_APL功能技术文档.md  ZZZSim_APL功能技术文档_.md  数据库录入指南.md  角色支持介绍.md
lib_webui/: clean_results_cache.py  constants.py  process_buff_result.py  process_char_config.py  process_dmg_result.py
script/: code_line.py  del_all_pycache.py
sim_progress/: __init__.py
simulator/: dataclasses.py  main_loop.py
tests/: test_buff.py  test_character.py  test_report.py  test_scheduled_event.py  test_simulator.py
zsim/: __init__.py  config.json  define.py  main.py  page_apl_editor.py  page_character_config.py  page_data_analysis.py  page_simulator.py  run.py  setup.py  webui.py  webview_app.py
zzz_simulator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+516 files in other folders)
