[build-system]
requires = ["setuptools>=75.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zzz-simulator"
version = "0.1.2"
description = "A simulator for ZZZ game"
requires-python = ">=3.12"
dependencies = [
    "pandas~=2.2.3",
    "tqdm~=4.66.5",
    "numpy~=2.2.5",
    "dash~=2.18.2",
    "plotly~=6.0.0",
    "setuptools~=75.1.0",
    "streamlit~=1.44.0",
    "toml~=0.10.2",
    "aiofiles>=24.1.0",
    "pydantic>=2.11.3",
    "psutil>=7.0.0",
    "streamlit-ace>=0.1.1",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[project.scripts]
zsim = "zsim.run:main"

[tool.setuptools]
packages = { find = { where = ["."], exclude = ["tests", "results", "logs"] } }

[tool.setuptools.package-data]
"*" = ["*.json", "*.csv", "*.toml"]

[tool.pytest.ini_options]
pythonpath = ["./zsim/"]

[options]
include_package_data = true

[dependency-groups]
dev = [
    "openpyxl>=3.1.5",
    "pytest>=8.3.5",
    "viztracer>=1.0.3",
]
