[project]
name = "zzz-simulator"
version = "0.1.7a2"
description = "A simulator for ZZZ game"
requires-python = ">=3.12"
dependencies = [
    "pandas~=2.2.3",
    "tqdm~=4.66.5",
    "numpy~=2.2.5",
    "dash~=2.18.2",
    "plotly~=6.0.0",
    "setuptools~=75.1.0",
    "streamlit~=1.44.0",
    "toml~=0.10.2",
    "aiofiles>=24.1.0",
    "pydantic>=2.11.3",
    "psutil>=7.0.0",
    "streamlit-ace>=0.1.1",
    "polars>=1.28.1",
    "pywebview>=5.4",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[project.scripts]
zsim = "zsim.run:main"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "openpyxl>=3.1.5",
    "pyinstaller>=6.13.0",
    "pytest>=8.3.5",
    "viztracer>=1.0.3",
]
