[build-system]
requires = ["setuptools>=75.1.0", "wheel>=0.41.2", "cx_Freeze>=6.15.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["zsim*"]
exclude = ["results*", "tests*", "docs*", "build*", ".venv*", ".git*"]

[tool.cxfreeze]
executables = [{ script = "zzz_simulator.py", base = "gui" }]

[tool.cxfreeze.build_exe]
excludes = [
    "tkinter",
    "unittest",
    "ipykernel",
    "pytest",
    "pyinstaller",
    "viztracer",
]
include_files = ["zsim", "docs"]


[project]
name = "zzz-simulator"
version = "0.3.0a1"
description = "A simulator for ZZZ game"
requires-python = ">=3.12"
dependencies = [
    "pandas~=2.2.3",
    "tqdm~=4.66.5",
    "numpy~=2.2.5",
    "dash~=2.18.2",
    "plotly~=6.0.0",
    "setuptools~=75.1.0",
    "streamlit~=1.44.0",
    "toml~=0.10.2",
    "aiofiles>=24.1.0",
    "pydantic>=2.11.3",
    "psutil>=7.0.0",
    "streamlit-ace>=0.1.1",
    "polars>=1.28.1",
    "pywebview>=5.4",
    "fastapi>=0.115.12",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.pytest.ini_options]
pythonpath = ["./zsim/"]

[project.scripts]
zsim = "zsim.run:main"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "openpyxl>=3.1.5",
    "pyinstaller>=6.13.0",
    "pytest>=8.3.5",
    "viztracer>=1.0.3",
    "cx-freeze>=6.15.0",
]
